fixed jumbotron small section padding

--- a/css/style.css
+++ b/css/style.css
@@ -423,7 +423,7 @@ a:hover {
 
 /* Jumbotron small*/
 .jumbotron-small {
-    padding: 80px 0;
+    padding: 90px 0;
 }
 
 .jumbotron-small .row {
